logs/glashammer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Glashammer-0.2.1.dev20180113.egg-info'...
Listing './lib/python3.5/site-packages/glashammer'...
Compiling './lib/python3.5/site-packages/glashammer/application.py'...
***   File "./lib/python3.5/site-packages/glashammer/application.py", line 235
    except HTTPException, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/glashammer/bundles'...
Listing './lib/python3.5/site-packages/glashammer/bundles/auth'...
Listing './lib/python3.5/site-packages/glashammer/bundles/auth/templates'...
Listing './lib/python3.5/site-packages/glashammer/bundles/forms'...
Listing './lib/python3.5/site-packages/glashammer/bundles/forms/templates'...
Listing './lib/python3.5/site-packages/glashammer/bundles/forms/templates/macros'...
Listing './lib/python3.5/site-packages/glashammer/bundles/i18n'...
Compiling './lib/python3.5/site-packages/glashammer/bundles/i18n/compilejs.py'...
***   File "./lib/python3.5/site-packages/glashammer/bundles/i18n/compilejs.py", line 19
    print 'Compiling JavaScript translations for %r' % lang
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/glashammer/bundles/jquery'...
Listing './lib/python3.5/site-packages/glashammer/bundles/jquery/templates'...
Listing './lib/python3.5/site-packages/glashammer/bundles/jquery/templates/includes'...
Compiling './lib/python3.5/site-packages/glashammer/bundles/openidauth.py'...
***   File "./lib/python3.5/site-packages/glashammer/bundles/openidauth.py", line 36
    print res == SUCCESS
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/glashammer/bundles/sqladb.py'...
***   File "./lib/python3.5/site-packages/glashammer/bundles/sqladb.py", line 284
    print app.sqla_db_engine
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/glashammer/shared'...
Listing './lib/python3.5/site-packages/glashammer/shared/jquery'...
Listing './lib/python3.5/site-packages/glashammer/tools'...
Listing './lib/python3.5/site-packages/glashammer/utils'...
Compiling './lib/python3.5/site-packages/glashammer/utils/config.py'...
***   File "./lib/python3.5/site-packages/glashammer/utils/config.py", line 62
    except (ValueError, TypeError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glashammer/utils/forms.py'...
***   File "./lib/python3.5/site-packages/glashammer/utils/forms.py", line 888
    except ValidationError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/glashammer/utils/http.py'...
***   File "./lib/python3.5/site-packages/glashammer/utils/http.py", line 38
    print check_target
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
